review page init

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myomyatzaw_portfolio",
+  "name": "nextparts_laptop_shop",
   "private": true,
   "version": "0.0.0",
   "type": "module",
